# pixel-forge

./: .gitattributes  .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  ATTRIBUTION.md  BACKLOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  USER_STORY_ANALYSIS.md  class_config.toml  relight-batch.sh  sprite_proof.html  target
android/: Cargo.toml  build-apk.sh  build.gradle  deploy-play.sh  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/src/: lib.rs
assets/store/: play-store-listing.md  privacy-policy.html
data/: .gitignore  SOURCES.md  dataset.bin.zst
data_sil_32/: normalize.json
data_v3_32/: MANIFEST.md  SOURCES.md
docs/: INDIE_PIXEL_ART_RESEARCH.md  MOE_PLAN.md  TIMELINE_OF_INVENTION.md  book.toml  compression_map.md
docs/govdocs/: FIPS.md  FedRAMP_NOTES.md  SBOM.md  SECURITY.md  SSDF.md  SUPPLY_CHAIN.md
docs/src/: SUMMARY.md  introduction.md
examples/: vulkan_smoke.rs
govdocs/: ACCESSIBILITY.md  CMMC.md  FEDERAL_USE_CASES.md  ITAR_EAR.md  PRIVACY.md
ios/: Cargo.toml  build-ipa.sh
ios/PixelForge/: AppDelegate.swift  Info.plist
ios/src/: lib.rs
models/: interactable.safetensors  kart.safetensors  projectile.safetensors  road.safetensors  tower.safetensors
release/: pixel-forge-android.aab  pixel-forge-linux-x86_64  pixel-forge-macos-arm64  pixel-forge-macos-x86_64
scripts/: augment_small.sh  autoprompt.py  build-all-targets.sh  expand_dataset.sh  feature-graphic.py  gemini-fill-prompts.md  gemini-fill.sh  gemini-prompts-dnd.md  gemini-prompts-remaining.md  gemini-prompts-spells.md  gemini-prompts.md  gemini-web-fill.py  gen-icon.py  gen-icon.rs  pull-datasets.sh  rebalance.sh  silo_queue.sh
src/: anvil_unet.rs  app.rs  class_cond.rs  class_router.rs  cluster.rs  combiner.rs  curate.rs  device_cap.rs  discriminator.rs  expert.rs  expert_train.rs  gpu_lock.rs  grid.rs  judge.rs  lib.rs  lora.rs  main.rs  medium_unet.rs  micro_unet.rs  moe.rs  nanosign.rs  normalize.rs  palette.rs  palette_net.rs  pipeline.rs  pipeline_stub.rs  plugin.rs  poa.rs  precond.rs  quantize.rs  relight.rs  scene.rs  sheet.rs  sponge.rs  swipe_store.rs  tiered_pipeline.rs  tiny_unet.rs  train.rs  vulkan_backend.rs  vulkan_tiny.rs
wasm/: Cargo.toml
wasm/src/: lib.rs  loader.rs  normalize.rs  sampler.rs  timestep.rs  tiny_unet.rs  weights.rs
web/: app.js  index.html  manifest.json  style.css  sw.js
