# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6
[package]
name = "pixel-forge"
version = "0.1.0"
edition = "2024"
description = "Pixel art game asset generator. Stardew/Starbound quality. Local-first, no cloud."

[[bin]]
name = "pixel-forge"
path = "src/main.rs"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
# accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
image = "0.25"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.4"
tokenizers = "0.21"
rand = "0.8"
walkdir = "2"
bincode = "1"
zstd = "0.13"
eframe = "0.31"
egui = "0.31"
