# Unlicense — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6
[workspace]

[package]
name = "pixel-forge"
version = "0.6.0"
edition = "2024"
description = "Pixel art game asset generator. Stardew/Starbound quality. Local-first, no cloud."

[lib]
name = "pixel_forge"
path = "src/lib.rs"

[[bin]]
name = "pixel-forge"
path = "src/main.rs"

[features]
default = ["metal", "sd-pipeline"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
# SD pipeline needs hf-hub + tokenizers for downloading models. Not needed on mobile.
sd-pipeline = ["dep:hf-hub", "dep:tokenizers", "dep:candle-transformers"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
image = "0.25"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }
rand = "0.8"
walkdir = "2"
bincode = "1"
zstd = "0.13"
eframe = "0.33"
egui = "0.33"
base64 = "0.22"
dirs = "6.0.0"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
half = "2"
