# Unlicense — cochranblock.org
# Pixel Forge iOS — egui app cross-compiled for ARM64 iOS.

[workspace]

[package]
name = "pixel-forge-ios"
version = "0.6.0"
edition = "2024"

[lib]
name = "pixel_forge_ios"
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
pixel-forge = { path = "..", default-features = false }
log = "0.4"
eframe = "0.33"
egui = "0.33"
